libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/labeled-argument.jsonc
//@ run: fail
//@ description: check if we error out if the path has labeled arguments
[
  "::kernel::special_form::if",
  {
    ":test": { "#literal": true }
    //~^ ERROR this labeled argument
  },
  { "#literal": true },
  { "#literal": false }
]
